webapp/WEB-INF/base/emfrontend2/theme/styles/theme.css
/* ... */
.ui-widget-header.sidetoggle.expanded .widget-header-title {
	background: url('../images/arrow-down.png') left 3px no-repeat;
	padding-left: 14px;
}

a.collectionbox.favorite
{
	padding-left: 23px;
	background: url("../images/icons/favorite-color.png") no-repeat scroll 0px 2px;
	width: 85%;
	display:inline-block;
		
}


.vert .carousel-item-next.carousel-item-left,
.vert .carousel-item-prev.carousel-item-right {
    -webkit-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
}

.vert .carousel-item-next,
.vert .active.carousel-item-right {
    -webkit-transform: translate3d(0, 100%, 0);
            transform: translate3d(0, 100% 0);
}

.vert .carousel-item-prev,
.vert .active.carousel-item-left {
-webkit-transform: translate3d(0,-100%, 0);
        transform: translate3d(0,-100%, 0);
}

.assetpanel-sidebar .carousel {
	height: 100%;
	overflow-y: auto;
}
.assetpanel-sidebar .gallery-item {
	display: block;
	padding:10px;
	margin:10px;
	text-align:center;
	margin-left:25px;

}
.assetpanel-sidebar .gallery-item-title {
	overflow: hidden; 
    text-overflow: ellipsis;
    display: block;
    white-space: nowrap;
}
.assetpanel-sidebar .gallery-item-checkbox {
   top: 50%;
    position: absolute;
    left: 25px;

}
.assetpanel-sidebar .active-asset
{
	background-color: #ccc;
	border: 1px solid #ccc;
}

.assetpanel-sidebar .gallery-thumb {
	border: solid 1px #d3d3d3;
}

.assetpanel-sidebar .gallery-thumb a
{
	text-decoration: none;
}
.assetpanel-sidebar .gallery-thumb:hover {
	border: 1px solid #a3a3a3;
	background-color: #d0e6ef;
}


.page-title {
    text-align: center;
    margin-bottom: 50px;
}
.form-container {
    width: 670px;
    margin: 20px auto;
}
.form-container form label {
    font-weight: bold;
	display:block;
	margin-bottom:0.2rem;
    
}
.form-container form .field {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    font-size: 16px;
    padding: 8px;
    width: 260px;
    margin-bottom: 10px;
    margin-top: 5px;
    border: 1px solid #CCC;
}
.form-container small {
    width: 100%;
    font-size: 10px;
    font-weight: bold;
    display: block;
    margin-bottom: 8px;
}
.form-container .small {
    width: 90px !important;
    margin-left: 10px;
}
#login-submit {
    margin: 10px 0 0 0;
}
#registration-submit {
    margin-top: 10px;
}
.login-form {
    border-right: 1px solid #efefef;
    padding: 0 0 30px;
    margin: 0;
    padding-right: 20px;
    margin-right: 20px;
}
.password-helper a {
    text-decoration: none;
    position: relative;
    top: 4px;
}
.password-helper a:hover {
    text-decoration: underline;
}
#registration-form .oeinputform input, #password-reminder input[type="text"] {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    font-size: 16px;
    padding: 8px;
    width: 260px;
    margin-bottom: 10px;
    margin-top: 6px;
}
#registration-form .oeinputform h4 {
    font-weight: bold;
    padding-bottom: 8px;
    width: 100%;
    font-size: 14px;
    text-align: left;
    padding: 0;
    margin: 0;
}
#password-reminder label {
    clear: both;
    display: block;
    margin: 25px 0 0 0;
    padding: 0;
}
.col4 {
    width: 340px;
    float: left;
}



.btns { padding:10px 20px;}

/* Collection drop */
.librarylabels ul li.dragoverselected, .dragoverselected
{
	border: 1px dashed #aaa;
	background-color:#ccc;
}

.librarylabels ul li.selected
{
	background-color:#C9E8F2;
}

#createnewarea { padding: 10px 5px;}
.collectionnew { display:block; text-decoration:underline; }
#createnewarea input[type="text"] { width: 150px; margin-bottom:5px;}


<!-- Style the star -->

#assetVoteCount .star {
    margin: 0px 2px 0 2;
    color:#eee;
    font-size:140%;
    line-height: 1;
}
#assetVoteCount .star.full {
    color:#FEDC71;
}
#assetVoteCount a {
    color: #CCC;
}
#assetVoteCount a:hover {
    text-decoration: underline;
}

#assetVoteTool {
    display: inline-block;
    position: relative;
    float:right;
    height:0px;
    padding: 10px;
}
#assetVoteTool .votebox 
{
   background: white;
    border-left: 1px solid #DDD;
     border-bottom: 1px solid #DDD;
    padding: 2px 0px 0 3px;
    position: relative;
    top: 0px;
    height: 27px;
    display: block;
    border-radius: 0 5px 0 5px;
}

#assetVoteTool .star {
    display: block;
    width: 26px;
    margin: 1px 5px 0 3px;
    font-size: 150%;
    color:#afafaf;
}
#assetVoteTool .votecounter {
	 text-decoration: none;
	 margin-right: 5px;
}
#assetVoteTool .star:hover, 
#assetVoteTool .star.full {
      color:#FEDC71;
}
#assetVoteTool a {
    color: #3490B2;
}
#assetVoteTool a:hover {
    text-decoration: underline;
}

